--- a/manuscript.tex
+++ b/manuscript.tex
@@ -128,7 +128,7 @@ Melanie I. Stefan\textsuperscript{2},
 \bigskip
 
 % Use the asterisk to denote corresponding authorship and provide email address in note below.
-* kevin_bonham@hms.harvard.edu
+* kevin_bonham\@hms.harvard.edu
 
 \section*{Abstract}
 While women are generally underrepresented in STEM fields, there are noticeable differences between fields. For instance, the gender ratio in biology is more balanced than in computer science. We were interested in how this difference is reflected in the interdisciplinary field of computational/quantitative biology. To this end, we examined the proportion of female authors in publications from the PubMed and arXiv databases. There are fewer female authors on research papers in computational biology, as compared to biology in general. This is true across authorship position, year, and journal impact factor. A comparison with arXiv shows that quantitative biology papers have a higher ratio of female authors than computer science papers, placing computational biology in between its two parent fields in terms of gender representation. Both in biology and in computational biology, a female last author increases the probability of other authors on the paper being female, pointing to a potential role of female PIs in influencing the gender balance.
@@ -310,7 +310,7 @@ $P_{female}$ for each journal with at least 1000 authors in the bio dataset. Jou
 Acknowledgements
 
 \section*{Acknowledgements}
-The authors would like to thank Markus Perl for the free use of Gender-API - contact@gender-api.com; Casper Strømgren for the free use of genderize.io info@genderize.io; Giovanni Filardo for sharing data [12]; Johanna Gutlerner, Marshall Thomas, Diane Lam, and other members of the Curriculum Fellows Program (CFP) at Harvard Medical School (HMS) for helpful feedback and discussions; and
+The authors would like to thank Markus Perl for the free use of Gender-API - contact\@gender-api.com; Casper Strømgren for the free use of genderize.io info\@genderize.io; Giovanni Filardo for sharing data [12]; Johanna Gutlerner, Marshall Thomas, Diane Lam, and other members of the Curriculum Fellows Program (CFP) at Harvard Medical School (HMS) for helpful feedback and discussions; and
 The HMS CFP and Educational Laboratory for resources and mentorship.
 
 \end{document}
